# ocaml-kata-machine

./: README.md  dune-project  ocamlalgos.opam
_build/: .db  .digest-db  log
_build/default/: .ocamlformat  README.md  ocamlalgos.dune-package  ocamlalgos.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: algolib.cma  algolib.cmxa  algolib.cmxs  ocamlalgos.cma  ocamlalgos.cmxa  ocamlalgos.cmxs
_build/default/lib/.formatted/: dune
_build/default/lib/.merlin-conf/: lib-algolib  lib-ocamlalgos
_build/default/lib/kata_implementations/: batch_queue_ds.ml  bt_preorder.ml  builtin_implementation.cma  builtin_implementation.cmxa  builtin_implementation.cmxs  builtin_implementation.ml-gen  dune  tree_ds.ml
_build/default/lib/kata_templates/: assoc_list.ml  kata_templates.cma  kata_templates.cmxa  kata_templates.cmxs  kata_templates.ml-gen
_build/default/lib/test_helpers/: gb_trees.ml  test_helpers.cma  test_helpers.cmxa  test_helpers.cmxs  test_helpers.ml-gen
_build/default/test/: algotests.cma  algotests.cmxa  algotests.cmxs  mapstest.ml  oUnit-maps suite.cache
_build/default/test/.formatted/: dune  sumtest.ml
_build/default/test/.mapstest.eobjs/: dune__exe__Mapstest.impl.d  dune__exe__Mapstest.intf.d
_build/default/test/.merlin-conf/: exe-mapstest  exe-ocamlalgos  (+1 more)
lib/: dune
lib/kata_implementations/: assoc_list.ml  batch_queue.ml  list_queue.ml  queue_ds.ml
lib/test_helpers/: dune  gb_trees.ml
test/: dune  mapstest.ml  sumtest.ml
test/build_test/: dune  list_stack_test.ml
test/day/: dune  mapstest.ml
(+199 files in other folders)
